# EMESSYOO

./: README.md
EMESSYOO/: CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  RELEASE_PREP.md  THIRD_PARTY_NOTICES.md  USER_GUIDE.md  setup.bat  setup.sh
EMESSYOO/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
EMESSYOO/Source/Audio/: AudioImporter.cpp  AudioImporter.h  AudioPlayer copy.cpp  AudioPlayer.cpp  AudioPlayer.h  BeforeAfterPreviewPlayer.cpp  BeforeAfterPreviewPlayer.h  NormalizationAnalyzer.cpp  NormalizationAnalyzer.h  PreviewPlayer.cpp  PreviewPlayer.h  VolumeMatchAnalyzer.cpp  VolumeMatchAnalyzer.h
EMESSYOO/Source/Core/: AudioFileHandler.cpp  AudioFileHandler.h  BackupMetadataStore.cpp  BackupMetadataStore.h  MSUProjectState.cpp  MSUProjectState.h  SNESROMReader.cpp  SNESROMReader.h
EMESSYOO/Source/Dialogs/: BackupRestoreDialog.cpp  BackupRestoreDialog.h  ExportDialog.cpp  ExportDialog.h  NormalizationDialog.cpp  NormalizationDialog.h
EMESSYOO/Source/Export/: MSU1Exporter.cpp  MSU1Exporter.h  MSUManifestUpdater.cpp  MSUManifestUpdater.h  ManifestHandler.cpp  ManifestHandler.h
EMESSYOO/Source/UI/: AudioLevelStudioComponent.cpp  AudioLevelStudioComponent.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  LoopEditorTab.cpp  LoopEditorTab.h  LoopMarker.cpp  LoopMarker.h  MSUFileBrowser.cpp  MSUFileBrowser.h  ToolbarPanel.cpp  ToolbarPanel.h  TransportControls.cpp  TransportControls.h  WaveformView.cpp  WaveformView.h
